<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="@drawable/nknown"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_item"
                android:id="@+id/day"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                />
            <EditText
                android:layout_margin="5dp"
                android:hint="@string/enter_break_fast"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/first_meal"
                android:layout_below="@+id/day"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
            <EditText
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/enter_lunch"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/second_meal"
                android:layout_below="@+id/first_meal"
                android:textSize="18sp"
                android:textStyle="bold|italic"/>
            <EditText
                android:layout_margin="5dp"
                android:hint="@string/enter_dinner"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/third_meal"
                android:layout_below="@+id/second_meal"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/saveButton"
                android:layout_below="@id/third_meal"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/Save_Button"
                android:background="@android:color/holo_blue_light"
                android:textColor="@android:color/white"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>